@@ -175,7 +175,7 @@ public class LocalSessions
      */
     public void cancelSession(UUID sessionID, boolean force)
     {
-        logger.debug("cancelling session {}", sessionID);
+        logger.info("Cancelling local repair session {}", sessionID);
         LocalSession session = getSession(sessionID);
         Preconditions.checkArgument(session != null, "Session {} does not exist", sessionID);
         Preconditions.checkArgument(force || session.coordinator.equals(getBroadcastAddress()),
@@ -241,10 +241,10 @@ public class LocalSessions
      */
     public void cleanup()
     {
-        logger.debug("Running LocalSessions.cleanup");
+        logger.trace("Running LocalSessions.cleanup");
         if (!isNodeInitialized())
         {
-            logger.debug("node not initialized, aborting local session cleanup");
+            logger.trace("node not initialized, aborting local session cleanup");
             return;
         }
         Set<LocalSession> currentSessions = new HashSet<>(sessions.values());
@@ -260,7 +260,7 @@ public class LocalSessions
                 }
                 else if (shouldDelete(session, now))
                 {
-                    logger.warn("Auto deleting repair session {}", session);
+                    logger.debug("Auto deleting repair session {}", session);
                     deleteSession(session.sessionID);
                 }
                 else if (shouldCheckStatus(session, now))
@@ -453,7 +453,7 @@ public class LocalSessions
 
     protected void sendMessage(InetAddress destination, RepairMessage message)
     {
-        logger.debug("sending {} to {}", message, destination);
+        logger.trace("sending {} to {}", message, destination);
         MessageOut<RepairMessage> messageOut = new MessageOut<RepairMessage>(MessagingService.Verb.REPAIR_MESSAGE, message, RepairMessage.serializer);
         MessagingService.instance().sendOneWay(messageOut, destination);
     }
@@ -465,7 +465,7 @@ public class LocalSessions
             Preconditions.checkArgument(session.getState().canTransitionTo(state),
                                         "Invalid state transition %s -> %s",
                                         session.getState(), state);
-            logger.debug("Setting LocalSession state from {} -> {} for {}", session.getState(), state, session.sessionID);
+            logger.trace("Changing LocalSession state from {} -> {} for {}", session.getState(), state, session.sessionID);
             boolean wasCompleted = session.isCompleted();
             session.setState(state);
             session.setLastUpdate();
@@ -485,7 +485,7 @@ public class LocalSessions
 
     public void failSession(UUID sessionID, boolean sendMessage)
     {
-        logger.debug("failing session {}", sessionID);
+        logger.info("Failing local repair session {}", sessionID);
         LocalSession session = getSession(sessionID);
         if (session != null)
         {
@@ -499,7 +499,7 @@ public class LocalSessions
 
     public synchronized void deleteSession(UUID sessionID)
     {
-        logger.debug("deleting session {}", sessionID);
+        logger.debug("Deleting local repair session {}", sessionID);
         LocalSession session = getSession(sessionID);
         Preconditions.checkArgument(session.isCompleted(), "Cannot delete incomplete sessions");
 
@@ -525,7 +525,7 @@ public class LocalSessions
      */
     public void handlePrepareMessage(InetAddress from, PrepareConsistentRequest request)
     {
-        logger.debug("received {} from {}", request, from);
+        logger.trace("received {} from {}", request, from);
         UUID sessionID = request.parentSession;
         InetAddress coordinator = request.coordinator;
         Set<InetAddress> peers = request.participants;
@@ -537,14 +537,14 @@ public class LocalSessions
         }
         catch (Throwable e)
         {
-            logger.debug("Error retrieving ParentRepairSession for session {}, responding with failure", sessionID);
+            logger.trace("Error retrieving ParentRepairSession for session {}, responding with failure", sessionID);
             sendMessage(coordinator, new FailSession(sessionID));
             return;
         }
 
         LocalSession session = createSessionUnsafe(sessionID, parentSession, peers);
         putSessionUnsafe(session);
-        logger.debug("created local session for {}", sessionID);
+        logger.info("Beginning local incremental repair session {}", session);
 
         ExecutorService executor = Executors.newFixedThreadPool(parentSession.getColumnFamilyStores().size());
 
@@ -553,7 +553,7 @@ public class LocalSessions
         {
             public void onSuccess(@Nullable Object result)
             {
-                logger.debug("pending anti-compaction for {} completed", sessionID);
+                logger.debug("Prepare phase for incremental repair session {} completed", sessionID);
                 setStateAndSave(session, PREPARED);
                 sendMessage(coordinator, new PrepareConsistentResponse(sessionID, getBroadcastAddress(), true));
                 executor.shutdown();
@@ -561,7 +561,7 @@ public class LocalSessions
 
             public void onFailure(Throwable t)
             {
-                logger.debug("pending anti-compaction for {} failed", sessionID);
+                logger.error(String.format("Prepare phase for incremental repair session %s failed", sessionID), t);
                 failSession(sessionID);
                 executor.shutdown();
             }
@@ -573,19 +573,19 @@ public class LocalSessions
         LocalSession session = getSession(sessionID);
         if (session != null && session.getState() != REPAIRING)
         {
-            logger.debug("Setting local session {} to REPAIRING", session);
+            logger.debug("Setting local incremental repair session {} to REPAIRING", session);
             setStateAndSave(session, REPAIRING);
         }
     }
 
     public void handleFinalizeProposeMessage(InetAddress from, FinalizePropose propose)
     {
-        logger.debug("received {} from {}", propose, from);
+        logger.trace("received {} from {}", propose, from);
         UUID sessionID = propose.sessionID;
         LocalSession session = getSession(sessionID);
         if (session == null)
         {
-            logger.debug("No LocalSession found for session {}, responding with failure", sessionID);
+            logger.debug("Received FinalizePropose message for unknown repair session {}, responding with failure");
             sendMessage(from, new FailSession(sessionID));
             return;
         }
@@ -594,10 +594,11 @@ public class LocalSessions
         {
             setStateAndSave(session, FINALIZE_PROMISED);
             sendMessage(from, new FinalizePromise(sessionID, getBroadcastAddress(), true));
+            logger.debug("Received FinalizePropose message for incremental repair session {}, responded with FinalizePromise");
         }
         catch (IllegalArgumentException e)
         {
-            logger.error("error setting session to FINALIZE_PROMISED", e);
+            logger.error(String.format("Error handling FinalizePropose message for %s", session), e);
             failSession(sessionID);
         }
     }
@@ -624,26 +625,28 @@ public class LocalSessions
      */
     public void handleFinalizeCommitMessage(InetAddress from, FinalizeCommit commit)
     {
-        logger.debug("received {} from {}", commit, from);
+        logger.trace("received {} from {}", commit, from);
         UUID sessionID = commit.sessionID;
         LocalSession session = getSession(sessionID);
         if (session == null)
         {
-            logger.warn("Received finalize commit message for unknown session {}", sessionID);
+            logger.warn("Ignoring FinalizeCommit message for unknown repair session {}", sessionID);
             return;
         }
 
         setStateAndSave(session, FINALIZED);
+        logger.info("Finalized local repair session {}", sessionID);
     }
 
     public void handleFailSessionMessage(InetAddress from, FailSession msg)
     {
-        logger.debug("received {} from {}", msg, from);
+        logger.trace("received {} from {}", msg, from);
         failSession(msg.sessionID, false);
     }
 
     public void sendStatusRequest(LocalSession session)
     {
+        logger.debug("Attempting to learn the outcome of unfinished local incremental repair session {}", session.sessionID);
         StatusRequest request = new StatusRequest(session.sessionID);
         for (InetAddress participant : session.participants)
         {
@@ -656,7 +659,7 @@ public class LocalSessions
 
     public void handleStatusRequest(InetAddress from, StatusRequest request)
     {
-        logger.debug("received {} from {}", request, from);
+        logger.trace("received {} from {}", request, from);
         UUID sessionID = request.sessionID;
         LocalSession session = getSession(sessionID);
         if (session == null)
@@ -667,17 +670,18 @@ public class LocalSessions
         else
         {
             sendMessage(from, new StatusResponse(sessionID, session.getState()));
-        }
+            logger.debug("Responding to status response message for incremental repair session {} with local state {}", sessionID, session.getState());
+       }
     }
 
     public void handleStatusResponse(InetAddress from, StatusResponse response)
     {
-        logger.debug("received {} from {}", response, from);
+        logger.trace("received {} from {}", response, from);
         UUID sessionID = response.sessionID;
         LocalSession session = getSession(sessionID);
         if (session == null)
         {
-            logger.warn("Received status response message for unknown session {}", sessionID);
+            logger.warn("Received StatusResponse message for unknown repair session {}", sessionID);
             return;
         }
 
@@ -686,10 +690,11 @@ public class LocalSessions
         if (response.state == FINALIZED || response.state == FAILED)
         {
             setStateAndSave(session, response.state);
+            logger.info("Unfinished local incremental repair session {} set to state {}", sessionID, response.state);
         }
         else
         {
-            logger.debug("{} is not actionable");
+            logger.debug("Received StatusResponse for repair session {} with state {}, which is not actionable. Doing nothing.", sessionID, response.state);
         }
     }
 
